[package] 
name = "n2j"
version = "0.1.0"
edition = "2021"

[dependencies]
roxmltree = "0.20"
thiserror = "2.0"
error-stack = { version = "0.5", features = ["serde", "hooks"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.12"

clap = { version = "4.5", features = ["derive"], optional = true }
clio = { version = "0.3.5", features = ["clap-parse"], optional = true }
serde_json = { version = "1.0", optional = true }
chrono = { version = "0.4", optional = true }
color-print = { version = "0.3", optional = true }

[features]
n2j_bin = ["clap", "clio", "serde_json", "chrono", "color-print"]

[[bin]]
name = "n2j"
path = "src/cli/main.rs"
required-features = ["n2j_bin"]
